完成計分的部分 (clip at 15:04)

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
       <canvas id="gameCanvas"></canvas>
     </main>
     <footer>
-      <p>practice by Sarah 2024
+      <p>practice by me 2024
         <br/>
         Tutorial from youtube:
-        <a href="https://www.youtube.com/watch?v=0qtg-9M3peI&t=410s" target="_blank">click me</a>
+        <a class="white" href="https://www.youtube.com/watch?v=0qtg-9M3peI&t=410s" target="_blank">click me</a>
       </p>
     </footer>
+    <!-- 匯入 JS 設定 -->
     <script type="module" src="/main.js"></script>
   </body>
 </html>
